welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ')' expected but '.' found.
                                          for (i <- to T.length-1) { T.(i) = getColor()
                                                        ^Array1:5: error: illegal start of simple expression
                                          }
                                          ^