welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() { def analyseColor() = {var T = new Array[Color](getMondeHauteur())
                                          for (i <- to T.length-1) { T.(i) = getColor()
                                                                 		avance()}
                                          }
                    def reproduire() = {}
                    analyseColor()
}